# search-in-log

./: Cargo.toml  LICENSE  README.md
src/: main.rs
